# pybind11_tutorial

./: pybind_example.ipynb
example/: CMakeLists.txt
example/include/: gaussian_classify.hpp
example/pybindings/: pybindings.cxx
example/src/: gaussian_classify.cpp
